--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -3,7 +3,9 @@
   <head>
     <title>FoxChatter Newsfeed</title>
     <meta charset="utf-8"/>
-
+    <link rel="stylesheet" type="text/css" href="/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/css/feed.css">
+    
   </head>
   <body>
     <header>
@@ -11,15 +13,24 @@
       FoxChatter
       <!--MyMarist Portal-->
       <div id="portal_button">
-        
+        myMarist
+        <img id = "redfox" src="images/redfox.png">
       </div>
+
+      
+
     </header>
     <main>
+      <div id = "newsfeed">
+        feed will go here
+      </div>
 
     </main>
     <footer>
       <p id="site_info">Copyright &copy; 2020: Marist College est. 1929</p>
     </footer>
-
+    <script src="/js/global.js"></script>
+    <script src="/js/feed.js"></script>
+      
   </body>
 </html>
